tests/evaluator/should_pass/override_tock.csp
f(tock) = tock+1

test1 = f(1) == 2
