tests/evaluator/should_fail/error_1.csp
test1 = error(show(1))
